--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 260 23% 97%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -64,6 +64,10 @@
 @layer base {
   * {
     @apply border-border;
+  }
+  html,
+  body {
+    @apply h-full;
   }
   body {
     @apply bg-background text-foreground;
